--- a/TaskApp/App.xaml
+++ b/TaskApp/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="TaskApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TaskApp"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
+             xmlns:local="clr-namespace:TaskApp">
+	<Application.Resources>
 		<Style TargetType="Button">
 			<Setter Property="Margin" Value="10 10 10 10" />
 			<Setter Property="FontSize" Value="30"/>
