--- a/TaskApp/MainWindow.xaml
+++ b/TaskApp/MainWindow.xaml
@@ -3,10 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TaskApp"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        xmlns:local="clr-namespace:TaskApp" xmlns:views="clr-namespace:TaskApp.Views"
+		mc:Ignorable="d"
+        Title="MainWindow" Height="650" Width="800">
     <Grid>
-
-    </Grid>
+		<views:CreateTaskView DataContext="{Binding CurrentViewModel}"/>
+	</Grid>
 </Window>
